refactor: 重构项目目录结构和代码组织
- 修改 .gitignore 文件，添加新的缓存目录
- 更新 VSCode 配置，调整代码调试路径
- 删除 __init__.py 文件，简化项目结构
- 移除 c_parser.py 和 cache_manager.py 文件，清理冗余代码

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "converter_cli.py",
             "console": "integratedTerminal",
-            "args": "parse ./test_structs.h"
+            "args": "parse ./tests/test_structs.h"
         },
         {
             "name": "Python Debugger: analyze",
@@ -18,7 +18,7 @@
             "request": "launch",
             "program": "converter_cli.py",
             "console": "integratedTerminal",
-            "args": "analyze test_data.c --format json -o result.json"
+            "args": "analyze ./tests/test_data.c --format json -o output/result.json"
         },
         {
             "name": "Python Debugger: generate",
