重构: 更新项目结构和代码组织
- 将结构转换器模块重命名为 c_converter，并更新相关路径
- 在 pyproject.toml 中添加项目元数据和依赖项
- 移除不再使用的 pytest.ini 和 tox.ini 文件
- 修复 test_structs.json 中的文件路径格式
- 删除冗余的测试和脚本文件，简化项目结构

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,19 @@
+[project]
+name = "struct-converter"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.8"
+dependencies = [
+    "click>=8.1.8",
+    "jinja2>=3.1.6",
+    "loguru>=0.7.3",
+    "psutil>=7.0.0",
+    "pytest>=8.3.5",
+    "pyyaml>=6.0.2",
+    "tree-sitter>=0.21.3",
+]
+
 [build-system]
 requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -5,7 +21,7 @@ build-backend = "setuptools.build_meta"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
-addopts = "-v --cov=src"
+addopts = "-v"
 pythonpath = ["src"]
 
 [tool.coverage.run]
